--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "90ad97b9",
+   "id": "a38d2268",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7342d4aa",
+   "id": "1cc9502e",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bb16bb9",
+   "id": "800124a0",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dcaf6c9",
+   "id": "bf1c31a1",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a12b8e66",
+   "id": "2cab74c2",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01f2019e",
+   "id": "d4cdd412",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3813de55",
+   "id": "2c0df321",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:10:02.771532Z",
-     "iopub.status.busy": "2025-01-30T12:10:02.771362Z",
-     "iopub.status.idle": "2025-01-30T12:10:05.734408Z",
-     "shell.execute_reply": "2025-01-30T12:10:05.733866Z"
+     "iopub.execute_input": "2025-01-30T12:14:24.528004Z",
+     "iopub.status.busy": "2025-01-30T12:14:24.527829Z",
+     "iopub.status.idle": "2025-01-30T12:14:27.527950Z",
+     "shell.execute_reply": "2025-01-30T12:14:27.527321Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75ea2757",
+   "id": "ff589712",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92ec81f4",
+   "id": "5b7304f7",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61321d89",
+   "id": "92b05af8",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c500e0eb",
+   "id": "f8ba97e2",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66a3e863",
+   "id": "6bdd2a12",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ea8e615",
+   "id": "c918d3bc",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58730965",
+   "id": "5550dddb",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56723b36",
+   "id": "1ef93a29",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "72d706b3",
+   "id": "e085af76",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:10:05.736505Z",
-     "iopub.status.busy": "2025-01-30T12:10:05.736247Z",
-     "iopub.status.idle": "2025-01-30T12:10:07.640620Z",
-     "shell.execute_reply": "2025-01-30T12:10:07.640012Z"
+     "iopub.execute_input": "2025-01-30T12:14:27.530205Z",
+     "iopub.status.busy": "2025-01-30T12:14:27.529795Z",
+     "iopub.status.idle": "2025-01-30T12:14:29.476797Z",
+     "shell.execute_reply": "2025-01-30T12:14:29.476166Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8942d88d",
+   "id": "3d85c1ea",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1e5bc247",
+   "id": "d0c31041",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:10:07.642528Z",
-     "iopub.status.busy": "2025-01-30T12:10:07.642192Z",
-     "iopub.status.idle": "2025-01-30T12:10:07.645542Z",
-     "shell.execute_reply": "2025-01-30T12:10:07.644968Z"
+     "iopub.execute_input": "2025-01-30T12:14:29.478876Z",
+     "iopub.status.busy": "2025-01-30T12:14:29.478424Z",
+     "iopub.status.idle": "2025-01-30T12:14:29.482136Z",
+     "shell.execute_reply": "2025-01-30T12:14:29.481518Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a485986f",
+   "id": "ecb6896d",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f5141f8",
+   "id": "384f0d11",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a927f2e",
+   "id": "f191508b",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "361fe1d7",
+   "id": "184a3a2f",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "12021b65",
+   "id": "70bf5d21",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:10:07.647226Z",
-     "iopub.status.busy": "2025-01-30T12:10:07.647043Z",
-     "iopub.status.idle": "2025-01-30T12:10:07.688742Z",
-     "shell.execute_reply": "2025-01-30T12:10:07.688230Z"
+     "iopub.execute_input": "2025-01-30T12:14:29.483875Z",
+     "iopub.status.busy": "2025-01-30T12:14:29.483675Z",
+     "iopub.status.idle": "2025-01-30T12:14:29.527531Z",
+     "shell.execute_reply": "2025-01-30T12:14:29.526959Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d862f1c",
+   "id": "f966a1f9",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9f335de1",
+   "id": "56a965aa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:10:07.690518Z",
-     "iopub.status.busy": "2025-01-30T12:10:07.690338Z",
-     "iopub.status.idle": "2025-01-30T12:10:07.754504Z",
-     "shell.execute_reply": "2025-01-30T12:10:07.754003Z"
+     "iopub.execute_input": "2025-01-30T12:14:29.529323Z",
+     "iopub.status.busy": "2025-01-30T12:14:29.529114Z",
+     "iopub.status.idle": "2025-01-30T12:14:29.597018Z",
+     "shell.execute_reply": "2025-01-30T12:14:29.596428Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35603905",
+   "id": "f693272c",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d96019c3",
+   "id": "4a8287c7",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "26a8f209",
+   "id": "3641c720",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:10:07.756506Z",
-     "iopub.status.busy": "2025-01-30T12:10:07.756137Z",
-     "iopub.status.idle": "2025-01-30T12:10:07.781895Z",
-     "shell.execute_reply": "2025-01-30T12:10:07.781407Z"
+     "iopub.execute_input": "2025-01-30T12:14:29.598810Z",
+     "iopub.status.busy": "2025-01-30T12:14:29.598579Z",
+     "iopub.status.idle": "2025-01-30T12:14:29.625676Z",
+     "shell.execute_reply": "2025-01-30T12:14:29.625084Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85f75f94",
+   "id": "9ef91efa",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72305ebd",
+   "id": "391156ea",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a42149af",
+   "id": "7421e04e",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be14bec7",
+   "id": "f2f3b49f",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "160f9aec",
+   "id": "0af5c7ea",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ffc938be",
+   "id": "2b7ee779",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:10:07.783808Z",
-     "iopub.status.busy": "2025-01-30T12:10:07.783455Z",
-     "iopub.status.idle": "2025-01-30T12:10:07.787705Z",
-     "shell.execute_reply": "2025-01-30T12:10:07.787108Z"
+     "iopub.execute_input": "2025-01-30T12:14:29.627788Z",
+     "iopub.status.busy": "2025-01-30T12:14:29.627328Z",
+     "iopub.status.idle": "2025-01-30T12:14:29.631470Z",
+     "shell.execute_reply": "2025-01-30T12:14:29.630777Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fad2747",
+   "id": "572ee75d",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3cd6ab9c",
+   "id": "18c3f5a2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:10:07.789718Z",
-     "iopub.status.busy": "2025-01-30T12:10:07.789253Z",
-     "iopub.status.idle": "2025-01-30T12:10:07.792256Z",
-     "shell.execute_reply": "2025-01-30T12:10:07.791687Z"
+     "iopub.execute_input": "2025-01-30T12:14:29.633366Z",
+     "iopub.status.busy": "2025-01-30T12:14:29.633021Z",
+     "iopub.status.idle": "2025-01-30T12:14:29.635996Z",
+     "shell.execute_reply": "2025-01-30T12:14:29.635506Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12140f4c",
+   "id": "c5e88e43",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2f32f8ef",
+   "id": "a988d154",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:10:07.793786Z",
-     "iopub.status.busy": "2025-01-30T12:10:07.793626Z",
-     "iopub.status.idle": "2025-01-30T12:10:10.343053Z",
-     "shell.execute_reply": "2025-01-30T12:10:10.342478Z"
+     "iopub.execute_input": "2025-01-30T12:14:29.637766Z",
+     "iopub.status.busy": "2025-01-30T12:14:29.637400Z",
+     "iopub.status.idle": "2025-01-30T12:14:32.171153Z",
+     "shell.execute_reply": "2025-01-30T12:14:32.170664Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07b5cffd",
+   "id": "58ab87ee",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "184135fe",
+   "id": "6acc05ad",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21983815",
+   "id": "5454c0ab",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc6fa596",
+   "id": "fc8fb6f2",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "cd4fed5c",
+   "id": "2a0057ef",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:10:10.345017Z",
-     "iopub.status.busy": "2025-01-30T12:10:10.344834Z",
-     "iopub.status.idle": "2025-01-30T12:10:10.348482Z",
-     "shell.execute_reply": "2025-01-30T12:10:10.347931Z"
+     "iopub.execute_input": "2025-01-30T12:14:32.173156Z",
+     "iopub.status.busy": "2025-01-30T12:14:32.172983Z",
+     "iopub.status.idle": "2025-01-30T12:14:32.176357Z",
+     "shell.execute_reply": "2025-01-30T12:14:32.175884Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7ff0071b05e0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fc5444fc5e0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb728904",
+   "id": "015ddabb",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "849a1b47",
+   "id": "5849a824",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38e29830",
+   "id": "c013de2e",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e317d94f",
+   "id": "1cc2f687",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "dfe65a20",
+   "id": "1592008a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:10:10.350541Z",
-     "iopub.status.busy": "2025-01-30T12:10:10.350195Z",
-     "iopub.status.idle": "2025-01-30T12:10:10.353031Z",
-     "shell.execute_reply": "2025-01-30T12:10:10.352478Z"
+     "iopub.execute_input": "2025-01-30T12:14:32.178245Z",
+     "iopub.status.busy": "2025-01-30T12:14:32.177940Z",
+     "iopub.status.idle": "2025-01-30T12:14:32.180808Z",
+     "shell.execute_reply": "2025-01-30T12:14:32.180212Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ec9359e1",
+   "id": "c918f418",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T12:10:10.354915Z",
-     "iopub.status.busy": "2025-01-30T12:10:10.354584Z",
-     "iopub.status.idle": "2025-01-30T12:10:11.413385Z",
-     "shell.execute_reply": "2025-01-30T12:10:11.412857Z"
+     "iopub.execute_input": "2025-01-30T12:14:32.182618Z",
+     "iopub.status.busy": "2025-01-30T12:14:32.182195Z",
+     "iopub.status.idle": "2025-01-30T12:14:33.244474Z",
+     "shell.execute_reply": "2025-01-30T12:14:33.243939Z"
     }
    },
    "outputs": [
